--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "hacker-quotes": "^1.0.0",
     "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "now-micro": "^0.4.0"
   },
   "devDependencies": {
